2.0.1
=====
Bugfixes:
 * Freeze on ripping Audio CD using external encoder to MP3 or FLAC (236466)
 * Drag and drop from Dolphin doesn't work (242745)
 * Symbolic links are not added to a project when a folder is added recursively (243555)
 * Install app icons to hicolor so that they are visible in non KDE WMs
   (https://bugzilla.novell.com/show_bug.cgi?id=619731)
 * Translation fixes

2.0
===
Changes (since 1.0.5):
 * Port to KDE Platform 4
 * Always allow manual writing speed selection.
 * Use proper toolbars instead of the toolboxes -> nicer layouting with different styles
 * Merged CD and DVD copy dialogs
 * Merged CD and DVD image burning dialogs
 * Merged CD-RW erasing and DVD formatting dialogs
 * Merged Data CD and Data DVD projects into one plain data project with Blu-ray support
 * Merged eMovix CD and eMovix DVD projects
 * Removed CD copy option "prefere CD-Text". K3b will now ask individually (there is no need to do this if no mounting is involved.)
 * Allow importing of arbitrary sessions into a data project, thus continuing other than the last session.
 * "Clear" project" now only clears the added data but leaves the settings as they were (bug 147838)
 * Support files bigger than 4GB via mkisofs 2.01.01a32 and above
 * Do only reload the medium for verification if necessary (depends on the writer)
 * Support for Blu-ray writing
 * Support for DVD and Blu-ray writing via cdrecord
 * New audio ripping pattern %e which is replaced by the file extension
 * Better support for RTL languages

2.0-rc4 (1.93)
==============
Changes:
 * Moved K3b Handbook to http://userbase.kde.org/K3b
 * Improved checking/unchecking items using Space key. Previously to do that the current item had to be in first column.

Bugfixes:
 * Cannot choose between cdrecord when both cdrecord and wodim are installed (239861)
 * Crash when files have been removed right before burning the project (240398)
 * Crash when moving a file into a directory with Shift key pressed (239075)